--- a/.cproject
+++ b/.cproject
@@ -27,7 +27,7 @@
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.434638315" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.base.649873636" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.base">
-								<option id="gnu.c.link.option.paths.334936375" superClass="gnu.c.link.option.paths" valueType="libPaths">
+								<option id="gnu.c.link.option.paths.334936375" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/usr/include"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.2143438999" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
